[metadata]
name = qiskit-symbolic
version = 0.0.1
url = https://github.com/SimoneGasperini/qiskit-symbolic
author = SimoneGasperini
author_email = simone.gasperini4@unibo.it
license = Apache 2.0
license_file = LICENSE

[options]
zip_safe = False
packages = find:
install_requires = qiskit-terra
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
testing = file: