[metadata]
name = qiskit-symb
version = 0.1.0
url = https://github.com/SimoneGasperini/qiskit-symb
author = SimoneGasperini
author_email = simone.gasperini4@unibo.it
license = Apache 2.0
license_file = LICENSE

[options]
zip_safe = False
packages = find:
install_requires = qiskit-terra
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
testing = file: