[metadata]
name = qiskit-symb
version = 0.2.0
url = https://github.com/SimoneGasperini/qiskit-symb
author = SimoneGasperini
author_email = simone.gasperini4@unibo.it
license = Apache 2.0
license_files = LICENSE
long_description_content_type = text/markdown
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires = qiskit
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
testing = file:
